--- a/css/reset.css
+++ b/css/reset.css
@@ -1,29 +1,10 @@
 * {
-	
 	margin: 0;
 	padding: 0;
 }
-
-button {
-	text-decoration: none;
-	border: none;
-	outline: none;
-}
-
-i {
-	list-style: none;
-}
-
-ol,
-ul,
-li,
-a {
+ol,li{
 	list-style: none;
 	text-decoration: none;
 }
 
-input {
-	border: none;
-	outline: none;
-}
 
